--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
  <body>
      <h1 class="header--main">Discover hidden places in the world around you</h1>
-     <p><a href="http://">Download Excursion (Coming Soon!)</a></p>
+     <p><a class="link--cta" href="http://">Download Excursion (Coming Soon!)</a></p>
  </body> 
 </html>
