added footer text

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
      <h4 class= "header--sub">Excursion remembers places you like, and recommends new points of interest around you.</h4>
      <p><img src="resources/images/camp.webp"></p>
      <p><img src="resources/images/phone.webp"></p>
+     <h4 class= "header--sub">Coming Soon for iPhone and Android</h4>
+     <p><a class="link--cta" href="http://">Download Excursion (Coming Soon!)</a></p>
+
+
  </body> 
 </html>
