--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
      <p><img src="resources/images/phone.webp"></p>
      <h4 class= "header--sub">Coming Soon for iPhone and Android</h4>
      <p><a class="link--cta" href="http://">Download Excursion (Coming Soon!)</a></p>
+     <p class="footer">Excursion</p>
+
 
 
  </body> 
